--- a/package.xml
+++ b/package.xml
@@ -43,9 +43,13 @@
   <build_depend>rospy</build_depend>
   <build_depend>rqt_gui</build_depend>
   <build_depend>rqt_gui_py</build_depend>
+  <build_depend>std_msgs</build_depend>
+  <build_depend>arl_hw_msgs</build_depend>
   <run_depend>rospy</run_depend>
   <run_depend>rqt_gui</run_depend>
   <run_depend>rqt_gui_py</run_depend>
+  <run_depend>std_msgs</run_depend>
+  <run_depend>arl_hw_msgs</run_depend>
 
   <export>
     <architecture_independent/>
